# cancer-prediction-fy290

./: 404.html  documentation.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: build-and-publish.yml  documentation.yml
cancer-prediction-fy290/cancer_model/: index.html
cancer-prediction-fy290/streamlit_app/: index.html
docs/: index.md
docs/cancer-prediction-fy290/: cancer_model.md  streamlit_app.md
src/cancer_prediction_fy290/: cancer_model.py  streamlit_app.py
src/cancer_prediction_fy290/scripts/: app.py
tests/: test_CancerModel.py
venvTest/: pyvenv.cfg
